--- a/community.html
+++ b/community.html
@@ -84,29 +84,35 @@
 			<h2>Users</h2>
 			<ul>
 				<li>subscribe to the <a href="#mailing-list">mailing list</a> or <a href="#forum">forums</a> or join our <a href="#irc">IRC channel</a> and contribute to the user community by answering requests and take part in discussions</li>
-				<li>Reports bugs and improve or validate bug reports on our issue tracker</li>
-				<li>Improve documentation (it's a wiki)</li>
+				<li>Report bugs, improve or validate bug reports on the <a href="https://github.com/openscad/openscad/issues">github issue tracker</a></li>
+				<li>Improve the <a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual">documentation</a> (it's a wiki)</li>
 			</ul>
 			<h2>Web developers</h2>
 			<ul>
-				<li>Improve the website</li>
+				<li>Improve the <a href="https://github.com/openscad/openscad.github.com">website</a> - it's a github repository</li>
 			</ul>
 			<h2>Programmers</h2>
 			<ul>
-				<li>Fix bugs</li>
-				<li>Write (better) tests</li>
+				<li>Fix <a href="https://github.com/openscad/openscad/issues">bugs</a> - good ones to get started are tagged <i>Low Hanging</i></li>
+				<li>Write (better) <a href="https://github.com/openscad/openscad/blob/master/doc/testing.txt">tests</a></li>
 				<li>Implement new features</li>
 				<li>Refactor or clean up code</li>
 			</ul>
+                        <h2>Donations</h2>
+                        <ul>
+                          <li>We accept sponsorships as well as individual donations</li>
+                          <li>For sponsorship opportunities, please contact <a href="mailto:marius@kintel.net">marius@kintel.net</a></li>
+                          <li>For donations, we have a <a href="http://flattr.com/thing/121566/OpenSCAD-The-Programmers-Solid-3D-CAD-Modeller">Flattr account</a></li>
+                        </ul>
 		</section>
 	
 		<section id="mailing-list">
-			<h1>Mailing List</h1>
-			
-			<form action="http://rocklinux.net/mailman/subscribe/openscad" method="POST" target="_blank">
-			  E-mail: <input name="email" /><input type="submit" value="Sign Me Up!" />
-			  </form>
-			
+		  <h1>Mailing List<small>
+                      <a href="http://rocklinux.net/mailman/listinfo/openscad">list info</a>
+                      <a href="http://rocklinux.net/pipermail/openscad">archives</a></small></h1>
+		  <form action="http://rocklinux.net/mailman/subscribe/openscad" method="POST" target="_blank">E-mail: <input name="email" /><input type="submit" value="Sign Me Up!" />
+                  </form>
+                  <br/>Note: The mailing list and <a href="#forum">forums</a> are bidirectionally connected.
 		</section>
 		
 		<section id="irc">
