--- a/about.html
+++ b/about.html
@@ -100,12 +100,12 @@
 		
 		<section id="license">
 			<h1>License</h1>
-			<p>OpenSCAD is <a href="http://www.gnu.org/philosophy/free-sw.html" target="_blank">Free Software</a>) released under the <a href="http://www.gnu.org/licenses/gpl-2.0.html" target="_blank">General Public License version 2</a>.</p>
+			<p>OpenSCAD is <a href="http://www.gnu.org/philosophy/free-sw.html" target="_blank">Free Software</a> released under the <a href="http://www.gnu.org/licenses/gpl-2.0.html" target="_blank">General Public License version 2</a>.</p>
 		</section>
 		
 		<section id="underlying-technology">
 			<h1>Underlying Technology</h1>
-			<p>OpenSCAD builds on top of a number of free software libraries; is uses <a href="http://qt-project.org" target="_blank">Qt</a> for user interface, <a href="http://cgal.org" target="_blank">CGAL</a> for CSG evaluation, OpenCSG and OpenGL for CSG previews, as well as boost, eigen and glew.</p>
+			<p>OpenSCAD builds on top of a number of free software libraries; is uses <a href="http://qt-project.org" target="_blank">Qt</a> for user interface, <a href="http://cgal.org" target="_blank">CGAL</a> for CSG evaluation, <a href="http://opencsg.org">OpenCSG</a> and OpenGL for CSG previews, as well as boost, eigen and glew.</p>
 		</section>
 		
 		<section id="related-projects">
