Link manual title to manual front page

--- a/documentation.html
+++ b/documentation.html
@@ -78,7 +78,7 @@
 	
 	<article>
 		<section id="user-manual">
-			<h1>OpenSCAD User Manual</h1>
+			<h1><a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual">OpenSCAD User Manual</a></h1>
 			<h2>Table of Contents</h2>
 			<ol>
 				<li><a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Introduction" target="_blank" title="OpenSCAD User Manual/Introduction">Introduction</a></li>
