Fixed download links + minor clarifications

--- a/downloads.html
+++ b/downloads.html
@@ -138,7 +138,7 @@
 			</div>
 			<div id="opensuse" class="subsection">
 				<h2>openSuse</h2>
-				<p>OpenSCAD is available from the <a href="https://build.opensuse.org/package/show?package=openscad&project=graphics" target="_blank">openSUSE build service</a>.</p>
+				<p>OpenSCAD is available from <a href="http://software.opensuse.org/download.html?project=graphics&package=openscad" target="_blank">software.opensuse.org</a></p>
 			</div>
 			<div id="other-linux" class="subsection">
 				<h2>Other Linux</h2>
@@ -166,11 +166,19 @@
 
 		<section id="source-code">
 			<h1>Source Code</h1>
+                        <a href="https://openscad.googlecode.com/files/openscad-2013.01.src.tar.gz">
+			<button class="left, last">
+			  <h3>OpenSCAD-2013.01</h3>
+			  <small>source code - tgz archive 3.3 MB</small>
+			</button>
+                        </a>
 			<p>You can also access the latest source code on github: <a href="https://github.com/openscad/openscad" target="_blank">openscad/openscad on github</a></p>
 		</section>
 		
 		<section id="snapshots">
 			<h1>Development Snapshots</h1>
+
+                        <p>Development snapshots are build irregularly. If you want access to a more recent development snapshot, please contact the <a href="community.html#mailing-list">mailing list</a>.<p>
 
 			<div id="snapshots-osx" class="subsection">
 				<h2>Mac OS X</h2>
@@ -190,7 +198,7 @@
 					<small>exe installer - 7 MB</small>
 				</button>
 				</a>
-				<a href="http://openscad.googlecode.com/files/OpenSCAD-2013.01.08.zip">
+				<a href="https://openscad.googlecode.com/files/OpenSCAD-2013.01.zip">
 				<button>
 					<h3>OpenSCAD-2013.01</h3>
 					<small>zip package - 7 MB</small>
@@ -200,13 +208,13 @@
 
 			<div id="snapshots-linux" class="subsection">
 				<h2>Linux</h2>
-				<a href="https://openscad.googlecode.com/files/openscad-2013.01.09.x86-32.tar.gz">
+				<a href="https://openscad.googlecode.com/files/openscad-2013.01.x86-32.tar.gz">
 				<button class="left">
 					<h3>OpenSCAD-2013.01</h3>
 					<small>x86 (32-bit) - tgz archive - 16 MB</small>
 				</button>
 				</a>
-				<a href="https://openscad.googlecode.com/files/openscad-2013.01.10.x86-64.tar.gz">
+				<a href="https://openscad.googlecode.com/files/openscad-2013.01.x86-64.tar.gz">
 				<button>
 					<h3>OpenSCAD-2013.01</h3>
 					<small>x64 (64-bit) - tgz archive - 17 MB</small>
