--- a/downloads.html
+++ b/downloads.html
@@ -164,7 +164,8 @@
 			<p>OpenSCAD is reported to build and run on FreeBSD and NetBSD, but no binary packages are available for these systems.</p>
 		</section>
 
-		<section id="source-code">
+                <a href="https://github.com/openscad/openscad"><img class="github-ribbon" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+		<section id="source-code" class="github-ribbon">
 			<h1>Source Code</h1>
                         <a href="https://openscad.googlecode.com/files/openscad-2013.01.src.tar.gz">
 			<button class="left, last">
