Updated mac snapshot

--- a/downloads.html
+++ b/downloads.html
@@ -183,10 +183,10 @@
 
 			<div id="snapshots-osx" class="subsection">
 				<h2>Mac OS X</h2>
-				<a href="https://openscad.googlecode.com/files/OpenSCAD-2013.04.09.dmg">
+				<a href="http://openscad.googlecode.com/files/OpenSCAD-2013.05.10.dmg">
 				<button>
-					<h3>OpenSCAD-2013.04.09</h3>
-					<small>32/64 bit Intel - dmg package - 27 MB</small>
+					<h3>OpenSCAD-2013.05.10</h3>
+					<small>32/64 bit Intel - dmg package - 23 MB</small>
 				</button>
 				</a>
 			</div>
