Updated Windows snapshot

--- a/downloads.html
+++ b/downloads.html
@@ -193,16 +193,16 @@
 
 			<div id="snapshots-windows" class="subsection">
 				<h2>Windows</h2>
-				<a href="http://openscad.googlecode.com/files/OpenSCAD-2013.03.09-Installer.exe">
+				<a href="https://openscad.googlecode.com/files/OpenSCAD-2013.05.12-x86-32-Installer.exe">
 				<button class="left">
-					<h3>OpenSCAD-2013.03.09</h3>
-					<small>exe installer - 7 MB</small>
+					<h3>OpenSCAD-2013.05.12</h3>
+					<small>exe installer - 7.5 MB</small>
 				</button>
 				</a>
-				<a href="https://openscad.googlecode.com/files/OpenSCAD-2013.01.zip">
+				<a href="https://openscad.googlecode.com/files/OpenSCAD-2013.05.12-x86-32.zip">
 				<button>
-					<h3>OpenSCAD-2013.01</h3>
-					<small>zip package - 7 MB</small>
+					<h3>OpenSCAD-2013.05.12</h3>
+					<small>zip package - 7.5 MB</small>
 				</button>
 				</a>
 			</div>
