--- a/news.html
+++ b/news.html
@@ -81,6 +81,7 @@
 				<p>After years of ignoring the OpenSCAD website, it's finally time to give it a well-deserved facelift. The whole site is fully reworked, the content has been made a lot more available, especially the <a href="documentation.html">documentation</a>. We've also launched a web forum mirror of the mailing list at <a href="http://forum.openscad.org">forum.openscad.org</a>. The <a href="gallery.html">gallery</a> page is still work in progress and will gradually be populated with a better selection of examples.</p>
                                 <p><a href="mailto:marius@kintel.net">Feedback</a>, suggestions for changes or patches are welcome (PS! the website is a <a href="https://github.com/openscad/openscad.github.com">git repository</a>).</p>
 				<p>Thanks to <a href="http://janetingley.com">Jane Tingley</a> and <a href="http://maxstein.net">Max Stein</a> for helping out with content, visual design and web development.</p>
+                        </div>
                 </section>
 		<section id="20130117">
 			<h1 class="title">OpenSCAD release: 2013.01</h1>
@@ -154,7 +155,7 @@
 			    <li>The color() statement now supports specifying colors as strings, e.g. color("Red")</li>
 			    <li>The color() statement now overrides colors specified further down in the tree</li>
 			    <li>if()/else() and the ternary operator can now take any value type as parameter. false, 0, empty string and empty vector or illegal value type will evaluate as false, everything else as true.</li>
-			    <li>Strings can now be lexographically compared using the <, <=, >, >= operators</li>
+			    <li>Strings can now be lexographically compared using the &lt;, &lt;=, &gt;, &gt;= operators</li>
 			    <li>Added PI constant.</li>
 			    <li>Number literals in scientific notation are now accepted by the parser</li>
 			    <li>Added import and export of the OFF file format</li>
