modify placeholder name to be more clear

--- a/downloads.html
+++ b/downloads.html
@@ -204,7 +204,7 @@
 				<h2>Mac OS X</h2>
 				<a id="MAC_SNAPSHOT_URL" href="https://openscad.googlecode.com/files">
 				<button>
-					<h3 id="MAC_SNAPSHOT_NAME">OpenSCAD yy.mm.dd</h3>
+					<h3 id="MAC_SNAPSHOT_NAME">OpenSCAD</h3>
 					<small>32/64 bit Intel - dmg package - </small><small id="MAC_SNAPSHOT_SIZE">?? MB</small>
 				</button>
 				</a>
@@ -214,13 +214,13 @@
 				<h2>Windows</h2>
 				<a id="WIN32_SNAPSHOT1_URL" href="https://openscad.googlecode.com/files">
 				<button class="left">
-					<h3 id="WIN32_SNAPSHOT1_NAME">OpenSCAD yy.mm.dd</h3>
+					<h3 id="WIN32_SNAPSHOT1_NAME">OpenSCAD</h3>
 					<small>exe installer - </small><small id="WIN32_SNAPSHOT1_SIZE">?? MB</small>
 				</button>
 				</a>
 				<a id="WIN32_SNAPSHOT2_URL" href="https://openscad.googlecode.com/files">
 				<button>
-					<h3 id="WIN32_SNAPSHOT2_NAME">OpenSCAD yy.mm.dd</h3>
+					<h3 id="WIN32_SNAPSHOT2_NAME">OpenSCAD</h3>
 					<small>zip package - </small><small id="WIN32_SNAPSHOT2_SIZE">?? MB</small>
 				</button>
 				</a>
@@ -230,13 +230,13 @@
 				<h2>Linux</h2>
 				<a id="LIN32_SNAPSHOT_URL" href="https://openscad.googlecode.com/files">
 				<button class="left">
-					<h3 id="LIN32_SNAPSHOT_NAME">OpenSCAD yy.mm.dd</h3>
+					<h3 id="LIN32_SNAPSHOT_NAME">OpenSCAD</h3>
 					<small>x86 (32-bit) - tgz archive - </small><small id="LIN32_SNAPSHOT_SIZE">?? MB</small>
 				</button>
 				</a>
 				<a id="LIN64_SNAPSHOT_URL" href="https://openscad.googlecode.com/files">
 				<button>
-					<h3 id="LIN64_SNAPSHOT_NAME">OpenSCAD yy.mm.dd</h3>
+					<h3 id="LIN64_SNAPSHOT_NAME">OpenSCAD</h3>
 					<small>x64 (64-bit) - tgz archive -</small><small id="LIN64_SNAPSHOT_SIZE">?? MB</small>
 				</button>
 				</a>
