Link to Low Hanging issues

--- a/community.html
+++ b/community.html
@@ -93,7 +93,7 @@
 			</ul>
 			<h2>Programmers</h2>
 			<ul>
-				<li>Fix <a href="https://github.com/openscad/openscad/issues">bugs</a> - good ones to get started are tagged <i>Low Hanging</i></li>
+				<li>Fix <a href="https://github.com/openscad/openscad/issues">bugs</a> - good ones to get started are tagged <a href="https://github.com/openscad/openscad/issues?labels=Low+Hanging">Low Hanging</a></li>
 				<li>Write (better) <a href="https://github.com/openscad/openscad/blob/master/doc/testing.txt">tests</a></li>
 				<li>Implement new features</li>
 				<li>Refactor or clean up code</li>
