Added bitcoin address and bountysource

--- a/community.html
+++ b/community.html
@@ -95,14 +95,15 @@
 			<ul>
 				<li>Fix <a href="https://github.com/openscad/openscad/issues">bugs</a> - good ones to get started are tagged <a href="https://github.com/openscad/openscad/issues?labels=Low+Hanging">Low Hanging</a></li>
 				<li>Write (better) <a href="https://github.com/openscad/openscad/blob/master/doc/testing.txt">tests</a></li>
-				<li>Implement new features</li>
+				<li>Implement <a href="https://github.com/openscad/openscad/issues?labels=New+Feature">new features</a></li>
 				<li>Refactor or clean up code</li>
 			</ul>
                         <h2>Donations</h2>
                         <ul>
                           <li>We accept sponsorships as well as individual donations</li>
                           <li>For sponsorship opportunities, please contact <a href="mailto:marius@kintel.net">marius@kintel.net</a></li>
-                          <li>For donations, we have a <a href="http://flattr.com/thing/121566/OpenSCAD-The-Programmers-Solid-3D-CAD-Modeller">Flattr account</a></li>
+                          <li>For donations, we have a <a href="http://flattr.com/thing/121566/OpenSCAD-The-Programmers-Solid-3D-CAD-Modeller">Flattr account</a> and a Bitcoin address: 18Eakg4ZCjjfVajXGvyntLKsEJYvZuT49C</li>
+                          <li>It's also possible to place bounties on individual issues using <a href="https://www.bountysource.com/#trackers/52063-openscad">BountySource</a></li>
                         </ul>
 		</section>
 	
