add 64 bit release

--- a/downloads.html
+++ b/downloads.html
@@ -198,7 +198,7 @@
 		<section id="snapshots">
 			<h1>Development Snapshots</h1>
 
-                        <p>Development snapshots are build irregularly. If you want access to a more recent development snapshot, please contact the <a href="community.html#mailing-list">mailing list</a>.<p>
+			<p>Development snapshots are build irregularly. If you want access to a more recent development snapshot, please contact the <a href="community.html#mailing-list">mailing list</a>.<p>
 
 			<div id="snapshots-osx" class="subsection">
 				<h2>Mac OS X</h2>
@@ -215,13 +215,29 @@
 				<a id="WIN32_SNAPSHOT1_URL" href="https://openscad.googlecode.com/files">
 				<button class="left">
 					<h3 id="WIN32_SNAPSHOT1_NAME">OpenSCAD</h3>
-					<small>exe installer - </small><small id="WIN32_SNAPSHOT1_SIZE">?? MB</small>
+					<small>x86 (32-bit) exe installer - </small><small id="WIN32_SNAPSHOT1_SIZE">?? MB</small>
 				</button>
 				</a>
+
+				<a id="WIN64_SNAPSHOT1_URL" href="https://openscad.googlecode.com/files">
+				<button class="left">
+					<h3 id="WIN64_SNAPSHOT1_NAME">OpenSCAD</h3>
+					<small>x86 (64-bit) exe installer - </small><small id="WIN64_SNAPSHOT1_SIZE">?? MB</small>
+				</button>
+
+				<br clear="both"/>
 				<a id="WIN32_SNAPSHOT2_URL" href="https://openscad.googlecode.com/files">
 				<button>
 					<h3 id="WIN32_SNAPSHOT2_NAME">OpenSCAD</h3>
-					<small>zip package - </small><small id="WIN32_SNAPSHOT2_SIZE">?? MB</small>
+					<small>x86 (32-bit) zip package - </small><small id="WIN32_SNAPSHOT2_SIZE">?? MB</small>
+				</button>
+				</a>
+
+				</a>
+				<a id="WIN64_SNAPSHOT2_URL" href="https://openscad.googlecode.com/files">
+				<button>
+					<h3 id="WIN64_SNAPSHOT2_NAME">OpenSCAD</h3>
+					<small>x86 (64-bit) zip package - </small><small id="WIN64_SNAPSHOT2_SIZE">?? MB</small>
 				</button>
 				</a>
 			</div>
