--- a/downloads.html
+++ b/downloads.html
@@ -181,10 +181,21 @@
 			</div>
 		</section>
 
+		<section id="bsd">
+			<h1>BSD</h1>
+			<div id="netbsd" class="subsection">
+				<h2>NetBSD</h2>
+				<p>OpenSCAD is available in NetBSD 6.1+ pkgsrc. <a href="http://pkgin.net/">Set up pkgin</a> and run this command:</p>
+				<pre>
+					<code># pkgin install openscad</code>
+				</pre>
+			</div>
+		</section>
+
 		<section id="other-systems">
 			<h1>Other Systems</h1>
 			<p>It's possible to build OpenSCAD on other systems as long as a C++ compiler and the prerequisite software libraries are available.</p>
-			<p>OpenSCAD is reported to build and run on FreeBSD and NetBSD, but no binary packages are available for these systems.</p>
+			<p>OpenSCAD is reported to build and run on FreeBSD but there are no updated binary packages available.</p>
 		</section>
 
                 <a href="https://github.com/openscad/openscad"><img class="github-ribbon" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
