--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 	<script src="assets/js/waypoints.min.js"></script>
 	<script src="assets/js/waypoints-sticky.min.js"></script>
 
+	<script type="text/javascript">
+	  var fileinfo = {};
+	</script>
 	<script src="inc/mac_release_links.js"></script>
 	<script src="inc/win_release_links.js"></script>
 	<script src="assets/js/home.js"></script>
