Added Prusa i3 and Mendel90

--- a/gallery.html
+++ b/gallery.html
@@ -71,14 +71,14 @@
 		<h1>Gallery</h1>
 		<ul>
 <!--			<li><a href="#user-manual">Code Examples</a></li>-->
-			<li><a href="#gallery">OpenSCAD on Thingiverse</a></li>
+			<li><a href="#gallery">OpenSCAD Gallery</a></li>
 		</ul>
 	</div>
 	
 	<article>
 		
 		<section id="gallery" class="left">
-			<h1>OpenSCAD on Thingiverse</h1>
+			<h1>OpenSCAD Gallery</h1>
 		</section>
 	
 	</article>
