--- a/downloads.html
+++ b/downloads.html
@@ -106,7 +106,7 @@
 			<div class="subsection">
 				<p>System requirements: Mac OS X 10.6 or newer</p>
 				<a id="MAC_RELEASE_URL" href="https://openscad.googlecode.com/files">
-				<button>
+				<button class="download-button">
 					<h3 id="MAC_RELEASE_NAME">OpenSCAD</h3>
 					<small>32/64 bit Intel - dmg package - </small><small id="MAC_RELEASE_SIZE">?? MB</small>
 				</button>
@@ -124,13 +124,13 @@
 			<h1>Windows</h1>
 			<p>System requirements: Windows XP or newer on x86/x64</p>
 			<a id="WIN32_RELEASE1_URL" href="https://openscad.googlecode.com/files">
-			<button class="left">
+			<button class="left, download-button">
 			  <h3 id="WIN32_RELEASE1_NAME">OpenSCAD</h3>
 			  <small>x86 (32-bit) exe installer - </small><small id="WIN32_RELEASE1_SIZE">?? MB</small>
 			</button>
 			</a>
 			<a id="WIN32_RELEASE2_URL" href="https://openscad.googlecode.com/files">
-			<button>
+			<button class="download-button">
 			  <h3 id="WIN32_RELEASE2_NAME">OpenSCAD</h3>
 			  <small>x86 (32-bit) zip package - </small><small id="WIN32_RELEASE2_SIZE">?? MB</small>
 			</button>
@@ -167,13 +167,13 @@
 				<h2>Other Linux</h2>
 				<p>The following generic Linux packages are available:</p>
 				<a id="LIN32_RELEASE_URL" href="https://openscad.googlecode.com/files">
-				<button class="left">
+				<button class="left, download-button">
 					<h3 id="LIN32_RELEASE_NAME">OpenSCAD</h3>
 					<small>x86 (32-bit) - tgz archive - </small><small id="LIN32_RELEASE_SIZE">?? MB</small>
 				</button>
 				</a>
 				<a id="LIN64_RELEASE_URL" href="https://openscad.googlecode.com/files">
-				<button>
+				<button class="download-button">
 					<h3 id="LIN64_RELEASE_NAME">OpenSCAD</h3>
 					<small>x64 (64-bit) - tgz archive -</small><small id="LIN64_RELEASE_SIZE">?? MB</small>
 				</button>
@@ -202,7 +202,7 @@
 		<section id="source-code" class="github-ribbon">
 			<h1>Source Code</h1>
 			<a id="SRC_RELEASE_URL" href="https://openscad.googlecode.com/files">
-			<button class="left, last">
+			<button class="left, last, download-button">
 			  <h3 id="SRC_RELEASE_NAME">OpenSCAD</h3>
 			  <small>source code - tgz archive -</small><small id="SRC_RELEASE_SIZE">?? MB</small>
 			</button>
@@ -218,7 +218,7 @@
 			<div id="snapshots-osx" class="subsection">
 				<h2>Mac OS X</h2>
 				<a id="MAC_SNAPSHOT_URL" href="https://openscad.googlecode.com/files">
-				<button>
+				<button class="download-button">
 					<h3 id="MAC_SNAPSHOT_NAME">OpenSCAD</h3>
 					<small>32/64 bit Intel - dmg package - </small><small id="MAC_SNAPSHOT_SIZE">?? MB</small>
 				</button>
@@ -228,21 +228,21 @@
 			<div id="snapshots-windows" class="subsection">
 				<h2>Windows</h2>
 				<a id="WIN32_SNAPSHOT1_URL" href="https://openscad.googlecode.com/files">
-				<button class="left">
+				<button class="left, download-button">
 					<h3 id="WIN32_SNAPSHOT1_NAME">OpenSCAD</h3>
 					<small>x86 (32-bit) exe installer - </small><small id="WIN32_SNAPSHOT1_SIZE">?? MB</small>
 				</button>
 				</a>
 
 				<a id="WIN64_SNAPSHOT1_URL" href="https://openscad.googlecode.com/files">
-				<button class="left">
+				<button class="left, download-button">
 					<h3 id="WIN64_SNAPSHOT1_NAME">OpenSCAD</h3>
 					<small>x86 (64-bit) exe installer - </small><small id="WIN64_SNAPSHOT1_SIZE">?? MB</small>
 				</button>
 
 				<br clear="both"/>
 				<a id="WIN32_SNAPSHOT2_URL" href="https://openscad.googlecode.com/files">
-				<button>
+				<button class="download-button">
 					<h3 id="WIN32_SNAPSHOT2_NAME">OpenSCAD</h3>
 					<small>x86 (32-bit) zip package - </small><small id="WIN32_SNAPSHOT2_SIZE">?? MB</small>
 				</button>
@@ -250,7 +250,7 @@
 
 				</a>
 				<a id="WIN64_SNAPSHOT2_URL" href="https://openscad.googlecode.com/files">
-				<button>
+				<button class="download-button">
 					<h3 id="WIN64_SNAPSHOT2_NAME">OpenSCAD</h3>
 					<small>x86 (64-bit) zip package - </small><small id="WIN64_SNAPSHOT2_SIZE">?? MB</small>
 				</button>
@@ -260,13 +260,13 @@
 			<div id="snapshots-linux" class="subsection">
 				<h2>Linux</h2>
 				<a id="LIN32_SNAPSHOT_URL" href="https://openscad.googlecode.com/files">
-				<button class="left">
+				<button class="left, download-button">
 					<h3 id="LIN32_SNAPSHOT_NAME">OpenSCAD</h3>
 					<small>x86 (32-bit) - tgz archive - </small><small id="LIN32_SNAPSHOT_SIZE">?? MB</small>
 				</button>
 				</a>
 				<a id="LIN64_SNAPSHOT_URL" href="https://openscad.googlecode.com/files">
-				<button>
+				<button class="download-button">
 					<h3 id="LIN64_SNAPSHOT_NAME">OpenSCAD</h3>
 					<small>x64 (64-bit) - tgz archive -</small><small id="LIN64_SNAPSHOT_SIZE">?? MB</small>
 				</button>
