add windows 64bit button for release. update links to 2013.06

--- a/downloads.html
+++ b/downloads.html
@@ -121,18 +121,34 @@
 		</section>
 
 		<section id="windows">
-			<h1>Windows</h1>
-			<p>System requirements: Windows XP or newer on x86/x64</p>
+			<h2>Windows</h2>
 			<a id="WIN32_RELEASE1_URL" href="https://openscad.googlecode.com/files">
 			<button class="left">
-			  <h3 id="WIN32_RELEASE1_NAME">OpenSCAD</h3>
-			  <small>x86 (32-bit) exe installer - </small><small id="WIN32_RELEASE1_SIZE">?? MB</small>
+				<h3 id="WIN32_RELEASE1_NAME">OpenSCAD</h3>
+				<small>x86 (32-bit) exe installer - </small><small id="WIN32_RELEASE1_SIZE">?? MB</small>
 			</button>
 			</a>
+
+			<a id="WIN64_RELEASE1_URL" href="https://openscad.googlecode.com/files">
+			<button class="left">
+				<h3 id="WIN64_RELEASE1_NAME">OpenSCAD</h3>
+				<small>x86 (64-bit) exe installer - </small><small id="WIN64_RELEASE1_SIZE">?? MB</small>
+			</button>
+
+			<br clear="both"/>
+
 			<a id="WIN32_RELEASE2_URL" href="https://openscad.googlecode.com/files">
 			<button>
-			  <h3 id="WIN32_RELEASE2_NAME">OpenSCAD</h3>
-			  <small>x86 (32-bit) zip package - </small><small id="WIN32_RELEASE2_SIZE">?? MB</small>
+				<h3 id="WIN32_RELEASE2_NAME">OpenSCAD</h3>
+				<small>x86 (32-bit) zip package - </small><small id="WIN32_RELEASE2_SIZE">?? MB</small>
+			</button>
+			</a>
+
+			</a>
+			<a id="WIN64_RELEASE2_URL" href="https://openscad.googlecode.com/files">
+			<button>
+				<h3 id="WIN64_RELEASE2_NAME">OpenSCAD</h3>
+				<small>x86 (64-bit) zip package - </small><small id="WIN64_RELEASE2_SIZE">?? MB</small>
 			</button>
 			</a>
 		</section>
