restore 'sys requirements' line

--- a/downloads.html
+++ b/downloads.html
@@ -121,7 +121,8 @@
 		</section>
 
 		<section id="windows">
-			<h2>Windows</h2>
+			<h1>Windows</h1>
+			<p>System requirements: Windows XP or newer on x86/x64</p> 
 			<a id="WIN32_RELEASE1_URL" href="https://openscad.googlecode.com/files">
 			<button class="left">
 				<h3 id="WIN32_RELEASE1_NAME">OpenSCAD</h3>
