--- a/downloads.html
+++ b/downloads.html
@@ -129,10 +129,23 @@
 			  <small>x86 (32-bit) exe installer - </small><small id="WIN32_RELEASE1_SIZE">?? MB</small>
 			</button>
 			</a>
+			<a id="WIN64_RELEASE1_URL" href="https://openscad.googlecode.com/files">
+			<button class="left, download-button">
+			  <h3 id="WIN64_RELEASE1_NAME">OpenSCAD</h3>
+			  <small>x86 (64-bit) exe installer - </small><small id="WIN64_RELEASE1_SIZE">?? MB</small>
+			</button>
+			</a>
+			<br clear="both"/>
 			<a id="WIN32_RELEASE2_URL" href="https://openscad.googlecode.com/files">
 			<button class="download-button">
 			  <h3 id="WIN32_RELEASE2_NAME">OpenSCAD</h3>
 			  <small>x86 (32-bit) zip package - </small><small id="WIN32_RELEASE2_SIZE">?? MB</small>
+			</button>
+			</a>
+			<a id="WIN64_RELEASE2_URL" href="https://openscad.googlecode.com/files">
+			<button class="download-button">
+			  <h3 id="WIN64_RELEASE2_NAME">OpenSCAD</h3>
+			  <small>x86 (64-bit) zip package - </small><small id="WIN64_RELEASE2_SIZE">?? MB</small>
 			</button>
 			</a>
 		</section>
