--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>OpenSCAD - The Programmers Solid 3D CAD Modeller</title>
-
+        <meta property="og:title" content="OpenSCAD" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="http://openscad.org" />
+        <meta property="og:image" content="http://openscad.org/assets/img/logo.png" />
 	<link href="assets/css/style.css" rel="stylesheet"/>
   
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
