--- a/about.html
+++ b/about.html
@@ -119,6 +119,7 @@
 				  <li><a href="http://gilesbathgate.com/category/rapcad/">RapCAD</a></li>
 				  <li><a href="http://www.implicitcad.org/">ImplicitCAD</a></li>
 				  <li><a href="http://openscad.net">OpenSCAD.net</a></li>
+				  <li><a href="https://cubehero.com">Cubehero</a></li>
 				</ul>
 			</section>
 
