--- a/community.html
+++ b/community.html
@@ -117,7 +117,7 @@
                           <li>For sponsorship opportunities, please contact <a href="mailto:marius@kintel.net">marius@kintel.net</a></li>
                           <li>For donations, we have a <a href="http://flattr.com/thing/121566/OpenSCAD-The-Programmers-Solid-3D-CAD-Modeller">Flattr account</a> and a Bitcoin address: 18Eakg4ZCjjfVajXGvyntLKsEJYvZuT49C</li>
                           <li>It's also possible to place bounties on individual issues using <a href="https://www.bountysource.com/#trackers/52063-openscad">BountySource</a></li>
-                          <li>..or show your appreciation by <a href="http://amzn.com/w/2CWXM7G4AUNOW">buying me a gift</a></li>
+                          <li>..or show your appreciation by <a href="http://www.amazon.ca/registry/wishlist/2N4WTGGFKT3IS">buying me a gift</a></li>
                         </ul>
 		</section>
 	
