--- a/downloads.html
+++ b/downloads.html
@@ -239,7 +239,7 @@
 		<section id="snapshots">
 			<h1>Development Snapshots</h1>
 
-			<p>Development snapshots are build irregularly. If you want access to a more recent development snapshot, please contact the <a href="community.html#mailing-list">mailing list</a>.<p>
+			<p>Development snapshots are built irregularly. If you want access to a more recent development snapshot, please contact the <a href="community.html#mailing-list">mailing list</a>.<p>
 
 			<div id="snapshots-osx" class="subsection">
 				<h2>Mac OS X</h2>
