Added Arch Linux install hints

--- a/downloads.html
+++ b/downloads.html
@@ -189,6 +189,12 @@
 				<h2>openSUSE</h2>
 				<p>OpenSCAD is available from <a href="http://software.opensuse.org/download.html?project=graphics&package=openscad" target="_blank">software.opensuse.org</a></p>
 			</div>
+			<div id="arch" class="subsection">
+				<h2>Arch Linux</h2>
+				<pre>
+					<code># pacman -S openscad</code>
+				</pre>
+			</div>
 			<div id="other-linux" class="subsection">
 				<h2>Other Linux</h2>
 				<p>The following generic Linux packages are available:</p>
