Relative link to cheat sheet

--- a/documentation.html
+++ b/documentation.html
@@ -109,7 +109,7 @@
 
 		<section id="cheat-sheet">
 			<h1>Cheat Sheet</h1>
-			<a href="http://www.openscad.org/cheatsheet/" target="_blank"><img class="imgLink" src="assets/img/openSCAD_cheat_sheet.png" width="680"/></a>
+			<a href="cheatsheet/index.html" target="_blank"><img class="imgLink" src="assets/img/openSCAD_cheat_sheet.png" width="680"/></a>
 		</section>
 
 		<section id="tutorials-blogs">
