Added children() to cheat sheet

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -125,6 +125,7 @@
 				<code>surface(file = "&hellip;.dat",center,convexity)</code>
 				<code>projection(cut)</code>
 				<code>render(convexity)</code>
+				<code>children([idx])</code>
 			</article>
 			<article>
 				<h2>Special variables</h2>
