Added d parameter to circle,cylinder and sphere

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -26,7 +26,7 @@
 			</article>
 			<article>
 				<h2>2D</h2>
-				<code>circle(radius)</code>
+				<code>circle(radius | d=diameter)</code>
 				<code>square(size,center)</code>
 				<code>square([width,height],center)</code>
 				<code>polygon([points])</code>
@@ -34,11 +34,11 @@
 			</article>
 			<article>
 				<h2>3D</h2>
-				<code>sphere(radius)</code>
+				<code>sphere(radius | d=diameter)</code>
 				<code>cube(size)</code>
 				<code>cube([width,height,depth])</code>
-				<code>cylinder(h,r,center)</code>
-				<code>cylinder(h,r1,r2,center)</code>
+				<code>cylinder(h,r|d,center)</code>
+				<code>cylinder(h,r1|d1,r2|d2,center)</code>
 				<code>polyhedron(points, triangles, convexity)</code>
 			</article>
 		</section>
