--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -126,6 +126,7 @@
 				<code>projection(cut)</code>
 				<code>render(convexity)</code>
 				<code>children([idx])</code>
+				<code>parent_module(idx)</code>
 			</article>
 			<article>
 				<h2>Special variables</h2>
