--- a/downloads.html
+++ b/downloads.html
@@ -9,6 +9,13 @@
   
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
+	<noscript>
+	 <center>
+	  Your browser has javascript disabled -- file links will go to a folder on <a href="http://files.openscad.org.">files.openscad.org</a><br>
+	  Please find your desired file inside the folder.
+	 </center>
+	</noscript>
+
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
 	<script src="assets/js/modernizr-1.7.min.js"></script>
 
